--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,7 @@ html[data-theme="light"] {
   --accent: #007bff;
   /* ========== LIQUID GLASS VARIABLES ========== */
   --lg-bg-color: rgba(255, 255, 255, 0.014);
-  --lg-highlight: rgba(255, 255, 255, 0.212);
-  --lg-text: #ffffff;
-  --lg-hover-glow: rgba(255, 255, 255, 0.4);
-  --lg-red: #fb4268;
-  --lg-grey: #5b5b5b;
+  --lg-highlight: rgba(43, 37, 37, 0.089);
 }
 
 html[data-theme="dark"] {
@@ -16,12 +12,8 @@ html[data-theme="dark"] {
   --text: #f5f5f7;
   --accent: #1e90ff;
   /* ========== LIQUID GLASS VARIABLES ========== */
-  --lg-bg-color: rgba(240, 12, 12, 0.014);
+  --lg-bg-color: rgba(255, 255, 255, 0.014);
   --lg-highlight: rgba(255, 255, 255, 0.212);
-  --lg-text: #000000;
-  --lg-hover-glow: rgba(255, 255, 255, 0.4);
-  --lg-red: #fb4268;
-  --lg-grey: #5b5b5b;
 }
 
 @keyframes bg-move {
@@ -40,13 +32,12 @@ body {
   flex-direction: column;
   /* place-items: center; */
   min-width: 320px;
-  min-height: 100vh;
   background-color: var(--bg);
   color: var(--text);
   transition: background-color 0.3s ease, color 0.3s ease;
   box-sizing: border-box;
   overflow: hidden;
-  background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?cs=srgb&dl=pexels-francesco-ungaro-998641.jpg&fm=jpg");
+  /* background-image: url("https://thumbs.dreamstime.com/b/nebula-black-white-cosmic-clouds-stars-deep-space-ethereal-beauty-ai-generated-357304242.jpg"); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
