--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
-  position: relative;
+  position: fixed;
+  bottom: 40px;
   z-index: 1;
   width: 100vw;
   display: flex;
@@ -10,9 +11,9 @@
 nav {
   width: 100%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  justify-content: space-evenly;
+  padding: 10px 0px;
 }
 
 nav ul {
