--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+:root {
+  --text-xxl: 3rem;
+  --text-xl: 2rem;
+  --text-lg: 1.25rem;
+  --text-md: 1rem;
+  --text-sm: 0.875rem;
+}
+
 html[data-theme="light"] {
   --bg: #f5f5f7;
   --text: #000000;
@@ -37,11 +47,9 @@ body {
   transition: background-color 0.3s ease, color 0.3s ease;
   box-sizing: border-box;
   overflow: hidden;
-  /* background-image: url("https://thumbs.dreamstime.com/b/nebula-black-white-cosmic-clouds-stars-deep-space-ethereal-beauty-ai-generated-357304242.jpg"); */
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  animation: bg-move 5s ease-in-out infinite alternate;
+  /* font */
+  font-family: "Roboto", sans-serif;
+  font-size: var(--text-md);
 }
 
 a {
@@ -54,4 +62,5 @@ button {
   border: none;
   color: var(--accent);
   cursor: pointer;
+  font-size: var(--text-md);
 }
