--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,15 @@
+@keyframes blurEffect {
+  0% {
+    filter: brightness(0.7) blur(2px);
+  }
+  50% {
+    filter: brightness(0.7) blur(6px);
+  }
+  100% {
+    filter: brightness(0.7) blur(2px);
+  }
+}
+
 .home {
   width: 100%;
   height: 100vh;
@@ -7,10 +19,15 @@
   justify-content: center;
 }
 
-.hello-world {
+/* .hello-world {
   z-index: 1;
   font-family: "Poppins", sans-serif;
   font-weight: 800;
+} */
+
+.hello-container {
+  z-index: 1;
+  margin-top: 10vw;
 }
 
 .saturn-image {
@@ -18,6 +35,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: brightness(0.7);
+  filter: brightness(0.7) blur(2px);
+  will-change: filter;
+  animation: blurEffect 3s ease-in-out forwards;
   z-index: -111;
 }
