--- a/src/index.css
+++ b/src/index.css
@@ -4,25 +4,32 @@
   --text-lg: 1.5rem;
   --text-md: 1.2rem;
   --text-sm: 0.9rem;
-}
 
-html[data-theme="light"] {
-  --bg: #f5f5f7;
-  --text: #000000;
-  --accent: #007bff;
-  /* ========== LIQUID GLASS VARIABLES ========== */
-  --lg-bg-color: rgba(255, 255, 255, 0.014);
-  --lg-highlight: rgba(43, 37, 37, 0.089);
-}
-
-html[data-theme="dark"] {
-  --bg: #000000;
+  --bg: #1d1d1f;
   --text: #f5f5f7;
   --accent: #1e90ff;
   /* ========== LIQUID GLASS VARIABLES ========== */
   --lg-bg-color: rgba(255, 255, 255, 0.014);
   --lg-highlight: rgba(255, 255, 255, 0.212);
 }
+
+/* html[data-theme="light"] {
+  --bg: #f5f5f7;
+  --text: #000000;
+  --accent: #007bff;
+  /* ========== LIQUID GLASS VARIABLES ========== */
+/* --lg-bg-color: rgba(255, 255, 255, 0.014);
+  --lg-highlight: rgba(43, 37, 37, 0.089); */
+/* } */
+
+/* html[data-theme="dark"] {
+  --bg: #000000;
+  --text: #f5f5f7;
+  --accent: #1e90ff;
+  /* ========== LIQUID GLASS VARIABLES ========== */
+/* --lg-bg-color: rgba(255, 255, 255, 0.014);
+  --lg-highlight: rgba(255, 255, 255, 0.212);
+}  */
 
 @keyframes bg-move {
   from {
@@ -38,16 +45,20 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
   /* place-items: center; */
   min-width: 320px;
   background-color: var(--bg);
   color: var(--text);
   transition: background-color 0.3s ease, color 0.3s ease;
   box-sizing: border-box;
-  overflow: hidden;
   /* font */
   font-family: "Roboto", sans-serif;
   font-size: var(--text-md);
+  /* background */
+  background-color: var(--bg);
 }
 
 a {
